:bug: Fixed some api docemntations
